src/scss/_chapter.scss
@use 'common/_functions' as *;
@use 'common/_mixins' as *;
@use 'common/_variables' as *;

.chapter-font-color {
  color: var(--text-chapter);

  :is(h1, h2, h3, h4, h5, h6) {
    color: var(--text-chapter);
  }
}

.chapter {
  &__article {
    position: relative;
    z-index: 1; // Makes sure the popup menus are higher thn surrounding elements
  }

  &__password-note {
    margin-bottom: 1.5rem;
  }

  &__actions {
    display: flex;
    align-items: center;
    justify-content: space-between;
    container-type: inline-size;

    &-left {
      flex-basis: 19%;
    }

    &-center {
      flex-basis: 56%;

      @container (max-width: 600px) {
        .hide-below-tablet {
          display: none !important;
        }
      }
    }

    &-right {
      flex-basis: 19%;

      @container (min-width: 500px) {
        flex-basis: 25%;
      }
    }

    &-container {
      display: flex;
      gap: 3px;
    }

    &-center {
      justify-content: center;
      column-gap: 6px;
    }

    &-right {
      justify-content: flex-end;

      :is(i, .icon) {
        font-size: 16px;
        text-align: center;
        min-width: 6px;
      }
    }

    > :not(.chapter__actions-center) > .button {
      border-radius: 0;

      &:first-child {
        border-top-left-radius: var(--layout-border-radius-small);
        border-bottom-left-radius: var(--layout-border-radius-small);
      }

      &:last-child {
        border-top-right-radius: var(--layout-border-radius-small);
        border-bottom-right-radius: var(--layout-border-radius-small);
      }
    }

    .button {
      &:is(.open-fullscreen, .close-fullscreen) {
        padding: 0;
      }

      &._navigation {
        @container (max-width: 499.9px) {
          .on {
            display: none;
          }
        }
      }
    }
  }

  &__headline {
    padding-top: 2rem;
    padding-bottom: 2.5rem;

    > a {
      color: var(--fg-700);
      font-size: var(--fs-s);
      font-weight: var(--font-weight-medium);
      line-height: 1;

      &:hover {
        color: var(--fg-400);
      }
    }
  }

  &__title {
    font-family: var(--ff-chapter-title);
    font-size: get_relative_clamp(1.25, 1.75, 320, $full-width, 'vw', 'em');
    line-height: 1.3;
    margin-top: .25rem;
  }

  &__author {
    display: block;
    color: var(--fg-700);
    font-size: var(--fs-xs);
    margin-top: .5rem;

    a:hover {
      color: var(--fg-400);
    }
  }

  &__password-note {
    p {
      text-indent: 0 !important;
    }
  }

  &__content {
    @include bp(768px) {
      min-height: 400px;
    }

    p {
      scroll-margin-top: 64px;

      &:not(:last-of-type, [class*=wp-block-]) {
        margin-bottom: 1.5em;
      }

      &:not(:first-of-type, .has-text-align-center, [class*=wp-block-], [align="center"], [align="right"]) {
        text-indent: 1.5rem;
      }

      :is(kbd, code, table, ul, ol, form, del, ins, mark, input, select, button, embed, iframe, sub, sup) {
        text-indent: 0;
      }
    }

    .chapter-formatting {
      --paragraph-spacing: 1.5em;
      --text-chapter: var(--fg-tinted);
      letter-spacing: .01em;

      p:not(:last-child, [class*=wp-block-]) {
        margin-bottom: var(--paragraph-spacing);
      }

      &.no-indent p {
        text-indent: 0 !important;
      }

      &.justify {
        p {
          &:not(.has-text-align-center, .has-text-align-left, .has-text-align-right, [align="center"], [align="right"]) {
            text-align: justify;
          }
        }
      }

      &:not(.hide-sensitive) .sensitive-alternative,
      &.hide-sensitive .sensitive-content {
        display: none;
        content-visibility: hidden; // Improve performance
      }

      &[style*=Garamond] {
        strong {
          font-weight: 700;
        }
      }
    }
  }

  &__footer {
    &:not(:empty) {
      margin-top: 3rem;
    }
  }

  &__support {
    color: var(--fg-400);
    font-size: var(--fs-xs);
    font-weight: var(--font-weight-strong);
    text-align: center;
    padding: 1rem 0;
    margin-top: 3rem;

    &-message {
      text-transform: uppercase;
      opacity: .5;
    }

    &-links {
      display: flex;
      justify-content: center;
      flex-wrap: wrap;
      gap: 8px;
      margin: 8px -8px 0;

      :is(i, .icon) {
        color: var(--fg-500);
        margin-right: 2px;
      }

      .icon--kofi {
        height: 1.3em;
        transform: translateY(-1px);
      }
    }

    a {
      color: var(--fg-400);
      font-size: var(--fs-xs);
      line-height: 32px;
      padding: 0 8px;
      border-radius: var(--layout-border-radius-small);
      height: 32px;
      opacity: .5;

      &:hover {
        background: var(--button-secondary-background-hover);
        opacity: 1;
      }

      &:focus-visible {
        opacity: 1;
      }
    }

    .icon {
      display: inline-block;
    }
  }

  .infobox {
    font-size: var(--fs-xs);

    &:not(:first-child) {
      margin-top: 2rem;
    }
  }

  &__warning.infobox {
    color: var(--chapter-infobox-warning-color, var(--red-400));
    font-weight: var(--font-weight-medium);

    p {
      &:not(:last-child) {
        margin-bottom: .5em;
      }
    }

    summary {
      strong {
        margin-left: .25em;
      }
    }

    label {
      span {
        text-decoration: underline;
      }

      &:hover {
        filter: brightness(1.25);
      }

      .off {
        display: none;
        content-visibility: hidden;
      }

      &.hide-sensitive {
        .on {
          display: none;
          content-visibility: hidden;
        }

        .off {
          display: initial;
          content-visibility: visible;
        }
      }
    }
  }
}

.current-bookmark {
  position: relative;

  &::before {
    content: '';
    position: absolute;
    left: 50%;
    top: -0.45rem;
    display: block;
    background: var(--bookmark-line);
    height: 3px;
    width: var(--site-width);
    max-width: 100vw;
    transform: translate(-50%);
  }

  &[data-bookmark-color=beta] {
    &::before,
    #button-set-bookmark {
      color: var(--bookmark-button-color-active-beta);
      background: var(--bookmark-color-beta);
    }
  }

  &[data-bookmark-color=gamma] {
    &::before,
    #button-set-bookmark {
      color: var(--bookmark-button-color-active-gamma);
      background: var(--bookmark-color-gamma);
    }
  }

  &[data-bookmark-color=delta] {
    &::before,
    #button-set-bookmark {
      color: var(--bookmark-button-color-active-delta);
      background: var(--bookmark-color-delta);
    }
  }

  #button-set-bookmark {
    background: var(--button-bookmark-background-active);
    color: var(--bookmark-button-color-active-alpha);
  }
}

.current-reading,
.selected-paragraph {
  position: relative;

  &::after {
    pointer-events: none;
    content: '';
    position: absolute;
    top: -0.5rem;
    bottom: -0.5rem;
    left: 50%;
    z-index: -1;
    display: block;
    width: 200%;
    max-width: min(100vw, var(--site-width));
    transform: translate(-50%);
  }
}

.current-reading {
  &::after {
    background: var(--tts-current-reading-background);
  }
}

.selected-paragraph {
  &::after {
    background: var(--paragraph-selection-background);
  }

  .paragraph-tools {
    display: block;
    content-visibility: visible;
  }
}

// Index dialog modal
.chapter-index {
  font-size: 14px;
  line-height: 21px;

  &[data-order="asc"] {
    i.on {
      display: none;
    }
  }

  &[data-order="desc"] {
    i.off {
      display: none;
    }

    ul {
      flex-direction: column-reverse;
    }
  }

  :is(i, .icon, .text-icon) {
    display: inline-block;
    color: currentColor;
    line-height: 1;
    text-align: center;
    min-width: 24px;
  }

  :is(a, a[href]) {
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 8px;
    color: currentColor;
    text-decoration: none;

    &:hover,
    &:visited {
      color: currentColor;
      text-decoration: none;
    }
  }

  li {
    background: var(--chapter-index-li-background, var(--content-li-background));
    border-radius: var(--layout-border-radius-small);

    :is(a, a[href]) {
      padding: 6px 8px;
    }

    :is(i, .icon, .text-icon) {
      margin-left: -6px;
    }

    &.current {
      background: var(--current-content-li-background);
    }
  }

  &__list {
    display: flex;
    flex-direction: column;
    gap: var(--chapter-index-list-gap, var(--content-list-gap, 4px));
  }

  &__control {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    margin-bottom: 16px;
  }

  &__back-link {
    font-weight: var(--font-weight-medium);
    padding: 2px 0;

    :is(i, .icon, .text-icon) {
      font-size: 15px;
    }
  }
}

:root .content-list-style-lines .chapter-index {
  li {
    border-radius: 0;
    border-bottom: var(--content-li-hr-border);

    a {
      border-bottom: var(--content-li-hr-border); // Used for the width
      border-color: transparent;
    }

    &.current {
      --this-offset: var(--chapter-index-list-gap, var(--content-list-gap, 4px));
      background: linear-gradient(to bottom, var(--current-content-li-background) 0%, var(--current-content-li-background) calc(100% - var(--this-offset)), transparent calc(100% - var(--this-offset)));
    }
  }
}

